# symphony

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Caddyfile.coolify  Dockerfile  LICENSE  README.md  SYMPHONY.md  TUTORIAL.md  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml  scratchpad_issues.json  symphony.toml  symphony.toml.example  taste-guide.md
.claude/skills/deploy-coolify/: SKILL.md
.claude/skills/review-hard/: SKILL.md
.github/workflows/: ci.yml  pages.yml
.thoughts/: codex-git-sandbox-research.md
deploy/: RUNBOOK.md  VPS_DEPLOY.md
deploy/cloudflared/: config.yaml
deploy/systemd/: symphonyd-maintenance.py  symphonyd-maintenance.service  symphonyd-maintenance.timer  symphonyd.service
docs/: TUTORIAL.md  config-creds-v2-design.md  config-db-ui-design.md  evals-research.md  incident-2026-05-26-pipeline-stall.md  linear-issue-lifecycle.md  linear-issue-prompt.txt  local-review-flow.md  local-review-handoff.md  production-reliability-audit.md  remote-execution-research.md  spike-findings.md  symphonyd-known-bugs.md  tutorial.html
docs/spike-evidence/: claude-resume-round1.json  claude-resume-round2.json  codex-pr-reactions.json  codex-review-sample.json
evals/review_classifier/: corpus.jsonl  eval.py
examples/: config.docker.yaml  config.yaml
frontend/: README.md  build-config.test.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: CanonicalStatus.tsx  IssueTimeline.test.ts  IssueTimeline.test.tsx  IssueTimeline.tsx  LiveFeed.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  auth0.test.tsx  auth0.tsx  filters.provider.test.tsx  filters.test.ts  filters.tsx  format.ts  formatTokens.ts  live.test.ts  live.ts  providerFilter.test.ts  providerFilter.tsx  queryClient.test.ts  queryClient.ts  useTheme.ts
frontend/src/pages/: ConfigPage.test.tsx  ConfigPage.tsx  HomePage.memo.test.tsx  HomePage.test.tsx  HomePage.tsx  IssuePage.test.tsx  IssuePage.tsx  activityFreshness.ts  issueControls.ts  tutorial.html
prompts/: merge_required_check_fix.md  review.md.j2  round1.md.j2
scripts/: backfill_termination.py  capture-fixtures.sh  codex-login-docker.sh  dev.sh  verify_poll_split_noop.py
src/symphony/: __init__.py  __main__.py  app.py  auth.py  claude_login.py  cli.py  codex_login.py  config.py  config_export.py  config_import.py  credentials.py  crypto.py  effective_config.py  notify.py  oauth.py  tokens.py  webhook.py  workspace.py
src/symphony/agent/: __init__.py  activity.py  claude_cli.py  claude_models.py  codex_cli.py  codex_models.py  model_usage.py  process.py  prompt.py  runner.py
src/symphony/db/: __init__.py  acceptance_state.py  activity_comments.py  comment_cursors.py  comment_events.py  config_bindings.py  config_globals.py  config_repo_secrets.py  cost_marks.py  runs.py  (+15 more)
symphony/: __init__.py  agent.py  cancel.py  cli.py  config.py  events.py  garbage.py  github.py  logging_setup.py  orchestrator.py  preflight.py  prompts.py  reporter.py  reviewer.py  runonce.py  scaffold.py  state.py  types.py  workspace.py
tests/: _workspace_helpers.py  test_acceptance_pipeline.py  test_acceptance_stage.py  test_acceptance_state_db.py  test_activity_comments.py  test_agent.py  test_agent_process.py  test_agent_prompt.py  test_already_satisfied_verify.py  test_app.py  test_auth.py  test_blockers.py  test_builder_background_hook.py  test_cancel.py  test_claude_login.py  test_cli.py  test_cli_local_review_dry_run.py  test_cli_runs.py  test_codex_cli.py  test_codex_login.py  test_comment_truncation.py  test_config.py  test_config_bindings_db.py  test_config_export.py  test_config_globals_db.py  test_config_import.py  test_config_repo_secrets_db.py  test_cost_cap_e2e.py  test_cost_guard.py  test_credential_write_back.py  test_credentials.py  test_crypto.py  test_db.py  test_db_migrations.py  test_dep_gating.py  test_docker_stack.py  test_docs_review_config.py  test_effective_config.py  test_eval_review_classifier.py  test_events.py  (+84 more)
tests/harness/: __init__.py  clock.py  fakes.py  harness.py  invariants.py  sim.py
(+106 files in other folders)
