[project]
name = "symphony"
version = "0.0.1"
description = "Headless, Linear-native, multi-repo orchestrator for AI coding agents."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pyjwt[crypto]>=2.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "click>=8.1",
    "uvicorn>=0.30",
]

[project.scripts]
symphony = "symphony.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0.12.20260510",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/symphony"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-m", "not eval"]
markers = [
    "eval: dataset-backed eval over a corpus (see evals/), not a unit test",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/symphony", "tests/harness/fakes.py", "tests/test_github_client_protocol.py"]

[[tool.mypy.overrides]]
# harness.py is pulled in transitively via tests/harness/__init__.py; it uses
# Pydantic AliasChoices constructor kwargs that mypy doesn't understand.
module = ["tests.harness.harness"]
ignore_errors = true
